﻿Что нового в сборке от 06.02.2019:

1. Свежие исходники SuperiorOS от 06.02.2019
2. Патч безопасности от 5 января