@@ -1,4 +1,11 @@
-﻿Что нового в сборке от 06.02.2019:
+﻿Что нового в сборке от 30.01.2019:
 
-1. Свежие исходники SuperiorOS от 06.02.2019
-2. Патч безопасности от 5 января
+1. Свежие исходники SuperiorOS от 30.01.2019
+2. Обновил MixExplorer до последней версии
+3. Починил неработающий ночной режим
+4. Иногда отваливался датчик приближения во время разговора - вроде починил(за несколько дней ниразу не отвалился)
+5. Ядро из коробки s339(добавил в него фиксирование TTL - проверяйте)
+6. Обновил графику adreno до 331 версии
+7. Пофикшен тихий звук при разговоре через bluetooth(проверяйте)
+
+Внимание! Из-за обновленной графики обновление по ОТА невозможно, ставить только начистую!
